<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:padding="10dp">

    <TextView
            android:id="@+id/titleTextView"
            style="@style/textViewStyle"
            android:text="@string/buttonChangeCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/titleEditText"
            style="@style/editTextStyle"
            tools:ignore="AutoFill"
            android:hint="@string/textViewSymTitle"
            android:inputType="text"
            android:maxLength="19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="@+id/neutralButton"
            app:layout_constraintEnd_toEndOf="@+id/positiveButton"
            android:layout_marginTop="8dp"/>

    <Button
            android:id="@+id/neutralButton"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/buttonReturnCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            android:layout_marginTop="8dp"/>

    <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/dialogButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            app:layout_constraintEnd_toStartOf="@+id/positiveButton"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="8dp"/>

    <Button
            android:id="@+id/positiveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/dialogButtonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>