<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel"
                  type="com.gmail.ortuchr.finance.presentation.screen.balance_new.FinanceBalanceNewViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:fadeScrollbars="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttonBack"
                android:layout_marginBottom="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5"/>

                <TextView
                        android:id="@+id/balanceTitle"
                        style="@style/textViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/balanceTitle"
                        android:textSize="@dimen/textSizeBig"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|bottom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"/>
                <TextView
                        android:id="@+id/textViewAmountTitle"
                        style="@style/textViewStyle"
                        android:text="@string/textViewAmountTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/balanceTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:id="@+id/textViewDateTitle"
                        style="@style/textViewStyle"
                        android:text="@string/textViewDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAmountTitle"/>
                <EditText
                        android:id="@+id/editTextAmount"
                        style="@style/editTextStyle"
                        android:text="@={viewModel.amountIncome}"
                        android:textSize="@dimen/numberSizeNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:ignore="AutoFill"
                        android:hint="@string/textViewSymTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAmountTitle"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:id="@+id/textViewDate"
                        style="@style/textViewStyle"
                        android:text="@{viewModel.dateIncome}"
                        android:textSize="@dimen/numberSizeNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextAmount"/>

                <RadioGroup
                        android:id="@+id/radioGroupBalanceChoice"
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTextAmount"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:focusable="false">
                    <RadioButton
                            android:id="@+id/radioAddToCard"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/radioButtonHeightBig"
                            android:text="@string/addToCardTitle"
                            android:checked="@={viewModel.isCard()}"
                            android:focusable="false"/>
                    <RadioButton
                            android:id="@+id/radioAddToCash"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/radioButtonHeightBig"
                            android:text="@string/addToCashTitle"
                            android:checked="@={viewModel.isCash()}"
                            android:focusable="false"/>
                    <RadioButton
                            android:id="@+id/radioChangeToCash"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/radioButtonHeightBig"
                            android:text="@string/changeToCashTitle"
                            android:checked="@={viewModel.isCardToCash()}"
                            android:focusable="false"
                            android:visibility="@{viewModel.isNewIncome() ? true : false}"/>
                    <RadioButton
                            android:id="@+id/radioChangeToCard"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/radioButtonHeightBig"
                            android:text="@string/changeToCardTitle"
                            android:checked="@={viewModel.isCashToCard()}"
                            android:focusable="false"
                            android:visibility="@{viewModel.isNewIncome() ? true : false}"/>
                </RadioGroup>

                <EditText
                        android:id="@+id/addBalanceComment"
                        style="@style/editTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/addCommentTitle"
                        android:text="@={viewModel.commentIncome}"
                        android:inputType="text"
                        tools:ignore="AutoFill"
                        android:maxLength="30"
                        android:singleLine="false"
                        android:visibility="@{viewModel.isCard() || viewModel.isCash() ? true : false}"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroupBalanceChoice"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
        <Button
                android:id="@+id/buttonBack"
                style="@style/backButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/buttonBackTitle"
                android:onClick="@{() -> viewModel.goBack()}"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/buttonAdd"
                style="@style/backButtonStyle"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="@{viewModel.isCard() || viewModel.isCash() ? @string/buttonAddTitle : @string/buttonTransferTitle}"
                android:visibility="@{viewModel.isNewIncome}"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"/>
        <Button
                android:id="@+id/buttonChange"
                style="@style/backButtonStyle"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="@string/buttonChangeTitle"
                android:visibility="@{!viewModel.isNewIncome}"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginEnd="8dp"/>
        <Button
                android:id="@+id/buttonDelete"
                style="@style/backButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/buttonDeleteTitle"
                android:visibility="@{!viewModel.isNewIncome}"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@+id/buttonChange"
                app:layout_constraintHorizontal_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>