<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel"
                  type="com.gmail.ortuchr.finance.presentation.screen.debts_more.FinanceDebtsMoreViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline8"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>


        <TextView
                android:id="@+id/debtsTitle"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/debtsTitle"
                android:textSize="@dimen/textSizeBig"
                android:textStyle="bold"
                android:gravity="center_horizontal|bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:id="@+id/debtToMeBig"
                style="@style/textViewStyle"
                android:text="@string/debtToMeBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"/>
        <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/debtToMeBig"
                android:layout_marginTop="8dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDebtsToMe"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/line1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="16dp"/>
        <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerDebtsToMe"/>
        <TextView
                android:id="@+id/debtsToMeAmountTitle"
                style="@style/textViewStyle"
                android:text="@string/resultTotalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerDebtsToMe"/>
        <TextView
                android:id="@+id/debtsToMeAmount"
                style="@style/numberStyle"
                android:text="@{viewModel.debtsToMe}"
                android:textColor="@color/green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/debtsToMeAmountTitle"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/debtsToMeAmountTitle"/>


        <TextView
                android:id="@+id/debtFromMeBig"
                style="@style/textViewStyle"
                android:text="@string/debtFromMeBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/debtsToMeAmountTitle"/>
        <View
                android:id="@+id/line3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/debtFromMeBig"
                android:layout_marginTop="8dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDebtsFromMe"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/line3"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonBack"/>
        <View
                android:id="@+id/line4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerDebtsFromMe"/>
        <TextView
                android:id="@+id/debtsFromMeAmountTitle"
                style="@style/textViewStyle"
                android:text="@string/resultTotalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/line4" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/debtsFromMeAmount"
                style="@style/numberStyle"
                android:text="@{viewModel.debtsFromMe}"
                android:textColor="@color/red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/debtsFromMeAmountTitle"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/debtsFromMeAmountTitle"/>
        <Button
                android:id="@+id/buttonBack"
                style="@style/backButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/buttonBackTitle"
                android:onClick="@{() -> viewModel.goBack()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>